--- a/sim.html
+++ b/sim.html
@@ -10,11 +10,13 @@
     <title>Car</title>
 </head>
 
-<body class="load">
-    <div class="container">
-        <h1>Welcome Click To Run Sim</h1>
-        <button class="load" onclick="location.href = 'sim.html'">Start</button>
-    </div>
+<body>
+    <script src=" https://rawgit.com/mrdoob/three.js/dev/build/three.js"></script>
+    <script src="https://rawgit.com/mrdoob/three.js/dev/examples/js/libs/jszip.min.js "></script>
+
+    <script type="module" src="index.js"></script>
+
+    <p>Hello World</p>
 </body>
 
 </html>
