added basic canvas and test cube animation

--- a/sim.html
+++ b/sim.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="sim.css">
     <link rel="icon" href="favico.ico">
     <title>Car</title>
 </head>
@@ -15,7 +16,6 @@
 
     <script type="module" src="index.js"></script>
 
-    <p>Hello World</p>
 </body>
 
 </html>
