addign  multi colrers to vertex

--- a/sim.html
+++ b/sim.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="sim.css">
     <link rel="icon" href="favico.ico">
     <title>Car</title>
+    <script type="importmap">
+        { "imports": { "three": "/build/three.module.js" }}
+    </script>
 </head>
 
 <body>
